--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,9 @@
 hr{
 	border-top:1px #ccc solid;
 }
-#topmenu_btns img{
-	width:48px;
-	height:48px;
+img#he{
+	width:20px;
+	height:20px;
 }
 #intro{
 	background:url(../UI/header-bg.jpg) no-repeat center top;
@@ -22,10 +22,13 @@ hr{
 }
 #intro  h1{
 	margin-top: 240px;
-	font-size: 130px;
+	font-size: 7em;
 }
 #intro h2{
-	font-size:50px;
+	font-size:4em;
+}
+#intro h3{
+	font-size:3em;
 }
 #brief{
 	font-size: 16.5px;
